2002-04-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi: Updates for MacOS X and
	emacs mode.

	* Documentation/windows/installing.texi: Suggest gswin32c (console
	program) for getting the version.  Layout fixes.

2002-04-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (Running LilyPond):  Separate
	windows viewing commands, remove silly comment about Yap.

2002-04-10  Mats Bengtsson  <matsb@s3.kth.se>

        * scm/grob-description.scm (MultiMeasureRest): number-threshold=1
        by default: avoid "1" over single bar rests.

	* scripts/lilypond-book.py (LatexPaper.set_geo_option): Simplify
	and correct the handling of geometry options.

2002-04-10  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/grob-interface.hh (ADD_INTERFACE): make
	implementation for Class::has_interface automatically. Junk all
	other implementations.

	* lily/grob.cc (internal_get_grob_property): also typecheck
	property reads. Catches even more undocced properties. Bugfixing
	left for the uninspired masses.

	* lily/beam.cc: remove end_after_line_breaking().

	* lily/grob.cc (calculate_dependencies): remove list support for
	callbacks.

	* lily/font-size-engraver.cc: only do font-interface.

2002-04-10  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Handle notes with cautionary accidentals.
	  Add few keywords.

2002-04-09 Chris Jackson <chris@fluffhouse.org.uk>

	* lily/arpeggio.cc: New function brew_chord_bracket to draw chord
	brackets using arpeggio requests.
	
	* ly/property-init.ly: Shorthand \arpeggioBracket defined as the
	molecule-callback to use for drawing the brackets.

	* Documentation/user/refman.itely: 
	* input/test/chord-bracket.ly: Chord brackets documented
	
2002-04-10  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-din-code.mf: tweaks for p, s. New dynamic r sign. 

	* mf/feta-eindelijk.mf: tweak for eighth rest: move bulb up.

2002-04-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
